--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   permission_handler: ^11.3.1
   timezone: ^0.9.3
+  dio: ^5.4.3+1
+  fluttertoast: ^8.2.6
+  sembast: ^3.7.1+2
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  google_fonts: ^6.2.1
+  dynamic_color: ^1.7.0
 
 dev_dependencies:
   flutter_test:
