--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -45,6 +44,10 @@ dependencies:
   path: ^1.9.0
   google_fonts: ^6.2.1
   dynamic_color: ^1.7.0
+  intl: ^0.19.0
+  rxdart: ^0.28.0
+  flutter_bloc: ^8.1.6
+  flutter_native_timezone_updated_gradle: ^2.0.3
 
 dev_dependencies:
   flutter_test:
