--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   rxdart: ^0.28.0
   flutter_bloc: ^8.1.6
   flutter_native_timezone_updated_gradle: ^2.0.3
+  freezed_annotation: any
+  json_annotation: ^4.9.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  freezed: any
+  build_runner: any
+  json_serializable: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
