--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -14,8 +14,6 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
-  freezed_annotation: any
-  json_annotation: ^4.9.0
   collection: ^1.18.0
   flutter_local_notifications: ^18.0.1
   timezone: any
@@ -28,14 +26,12 @@ dependencies:
   speech_to_text: ^6.6.2
   wave_divider: ^0.0.3
   uuid: ^4.4.2
+  data_class: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  freezed: any
-  build_runner: any
-  json_serializable: any
 
 flutter:
   uses-material-design: true
